--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
         <div id="title-card" class="section">
             <img id="headshot" src="homepage/headshot.jpeg" alt="My professional headshot">
             <div id="title-card-right">
-                <p>Director of Engineering at Renewvia Energy<br>
-                <br>
-                PhD in Electrical Engineering and Computer Science, MIT<br>
-                <br>
-                Email: <a rel="author" href="mailto:nicholas.selby@renewvia.com" target="_blank">nicholas.selby@renewvia.com</a></p>
+                <div>
+                    <p>Director of Engineering at Renewvia</p>
+                    <p>PhD in Electrical Engineering and Computer Science, MIT</p>
+                    <address>Email: <a rel="author" href="mailto:nicholas.selby@renewvia.com" target="_blank">nicholas.selby@renewvia.com</a></address>
+                </div>
                 <div class="separator"></div>
                 <div id="social-media-wrapper">
                     <a aria-label="My LinkedIn profile" rel="external" href="https://www.linkedin.com/in/nicholas-selby-5278b334/" target="_blank"><img src="homepage/icon-linkedin.png" alt="LinkedIn icon"></a>
                     <a aria-label="My Google Scholar Profile" rel="external" href="https://scholar.google.com/citations?user=SKcs1pEAAAAJ" target="_blank"><img src="homepage/icon-googlescholar.png" alt="Google Scholar icon"></a>
-                    <a aria-label="My GitHub profile" rel="external" href="https://github.com/rupumped" target="_blank"><img src="homepage/icon-github.png" alt="GitHub icon"></a>
-                    <a aria-label="My CV" href="homepage/nselby-cv.pdf" download target="_blank"><img src="homepage/icon-cv.png" alt="Icon of a CV"></a>
+                    <a aria-label="My GitHub profile" rel="external" href="https://github.com/rupumped" target="_blank"><img class="bw" src="homepage/icon-github.png" alt="GitHub icon"></a>
+                    <a aria-label="My CV" href="homepage/nselby-cv.pdf" download target="_blank"><img class="bw" src="homepage/icon-cv.png" alt="Icon of a CV"></a>
                 </div>
             </div>
         </div>
