--- a/public-speaking-problems.html
+++ b/public-speaking-problems.html
@@ -7,7 +7,7 @@
     <META NAME="Handheld-Friendly" content="True">
 
 	<!-- SEO Description-->
-	<meta name="description" content="Swallow a tablespoon of honey. Then, perform while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall.">
+	<meta name="description" content="Swallow a tablespoon of honey. Then, rehearse while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall.">
     <link rel="canonical" href="https://rupumped.github.io/public-speaking-problems.html">
 
 	<!-- Favicon -->
@@ -46,27 +46,27 @@
 
         <section class="odd">
             <h2>Swaying</h2>
-            <p>Stand on something precarious, like a stool, and perform your speech.</p>
+            <p>Stand on something precarious, like a stool, and rehearse your speech.</p>
         </section>
 
         <section class="even">
             <h2>Pacing or Nervous Feet</h2>
-            <p>Perform with heavy objects on your feet.</p>
+            <p>Rehearse with heavy objects on your feet.</p>
         </section>
 
         <section class="odd">
             <h2>Nervous Hands</h2>
-            <p>Perform while holding dumbbells (or other heavy objects) in your hands.</p>
+            <p>Rehearse while holding dumbbells (or other heavy objects) in your hands.</p>
         </section>
 
         <section class="even">
             <h2>Poor Enunciation</h2>
-            <p>Perform while biting down on a wooden pencil with your back molars.</p>
+            <p>Rehearse while biting down on a wooden pencil with your back molars.</p>
         </section>
 
         <section class="odd">
             <h2>Insufficient Volume or Frequently Losing Your Voice or Insufficient Projection</h2>
-            <p>Perform while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall. Try to relax your throat.</p>
+            <p>Rehearse while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall. Try to relax your throat.</p>
         </section>
 
         <section class="even">
@@ -81,7 +81,7 @@
 
         <section class="even">
             <h2>Repetitive of Insufficient Hand Gestures</h2>
-            <p>Recite each line using three different hand gestures, even if some of them don’t make sense.</p>
+            <p>Recite each line using three different hand gestures, even if some of them don't make sense.</p>
         </section>
 
         <section class="odd">
@@ -91,7 +91,7 @@
 
         <section class="even">
             <h2>Insufficient Eye Contact</h2>
-            <p>Perform while standing uncomfortably close to a mirror, staring into your own eyes. Then, perform while standing uncomfortably close to a friend, staring into their eyes the entire time.</p>
+            <p>Rehearse while standing uncomfortably close to a mirror, staring into your own eyes. Then, rehearse while standing uncomfortably close to a friend, staring into their eyes the entire time.</p>
         </section>
 
         <section class="odd">
