--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="chevron" aria-label="Expand icon"><polyline points="6 9 12 15 18 9"></polyline></svg>
                     <h2>Publications</h2>
                 </summary>
+
                 <div class="item">
                     <img src="homepage/l3.jpg" alt="Illustration of the Learned Lifting Linearization algorithm">
                     <div class="desc">
@@ -144,10 +145,28 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="chevron" aria-label="Expand icon"><polyline points="6 9 12 15 18 9"></polyline></svg>
                     <h2>Patents</h2>
                 </summary>
-                <ul>
-                    <li>"Methods and Apparatus for Wideband Localization." Zhihong Luo, Qiping Zhang, Nicholas Selby, Yunfei Ma, Manish Singh, and Fadel Adib. U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, and <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a>. Published 2020 and 2021.</li>
-                    <li>"Full-Duplex, Bi-Directional, Analog Relay." Yunfei Ma, Nicholas Selby, and Fadel Adib. U.S. Patent No. <a rel="external" href="https://patents.google.com/patent/US10389429B2/" target="_blank" aria-label="Patent #10,389,429">10,389,429</a>. Published 2019.</li>
-                </ul>
+
+                <div class="item">
+                    <img src="homepage/patent-rfind.jpg" alt="Patent figure of the RFind algorithm">
+                    <div class="desc">
+                        <b>Methods and Apparatus for Wideband Localization</b><br>
+                        Zhihong Luo, Qiping Zhang, Nicholas Selby, Yunfei Ma, Manish Singh, and Fadel Adib<br>
+                        U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, and <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a>.<br>
+                        Published 2020 and 2021.
+                    </div>
+                </div>
+    
+                <div class="separator"></div>
+
+                <div class="item">
+                    <img src="homepage/patent-rfly.jpg" alt="Patent figure of the RFly drone">
+                    <div class="desc">
+                        <b>Full-Duplex, Bi-Directional, Analog Relay</b><br>
+                        Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
+                        U.S. Patent No. <a rel="external" href="https://patents.google.com/patent/US10389429B2/" target="_blank" aria-label="Patent #10,389,429">10,389,429</a>.<br>
+                        Published 2019.
+                    </div>
+                </div>
             </details>
         </section>
 
@@ -239,7 +258,6 @@
                     <li>Keynote speaker at No Excuses University national convention, 2014</li>
                     <li>Host of "Tech Talks," a science communication competition, at the Atlanta Science Festival, 2014</li>
                     <li>Opening speaker for the Georgia Tech Freshman Convocation Ceremony, 2013</li>
-                    <li>Opening speaker for the Georgia Tech Martin Luther King Jr. Day of Service, 2013</li>
                 </ul>
                 Academic Service:
                 <ul>
