Mobile font tweak, new patent pic, lowtemp gallery, cleanup

--- a/lowtemp.html
+++ b/lowtemp.html
@@ -117,6 +117,22 @@
             <h2>Results</h2>
             <p>The device worked. We were able to deploy a sample in a cryogenic tank and rotate it about both axes independently in extreme cold and high magnetic field. Our results were published in <i>Review of Scientific Instruments</i>, a journal of the American Institute of Physics. To learn more about the project, <a href="homepage/dualaxis.pdf" download target="_blank">read our paper</a>.</p>
         </section>
+
+        <img class="img-full-width" src="project-pages/lowtemp-g4.jpg" alt="Me shaking hands with Dr. Wei Pan">
+        <div class="gallery">
+            <a href="project-pages/lowtemp-g0.jpg" target="_blank">
+                <img src="project-pages/lowtemp-g0.jpg" alt="Diagram of my biaxial rotation stage">
+            </a>
+            <a href="project-pages/lowtemp-g1.jpg" target="_blank">
+                <img src="project-pages/lowtemp-g1.jpg" alt="Diagram of the controller of my biaxial rotation stage">
+            </a>
+            <a href="project-pages/lowtemp-g2.jpg" target="_blank">
+                <img src="project-pages/lowtemp-g2.jpg" alt="Graph showing dip in R_{xx} at v=2">
+            </a>
+            <a href="project-pages/lowtemp-g3.jpg" target="_blank">
+                <img src="project-pages/lowtemp-g3.jpg" alt="Picture of my biaxial rotation stage">
+            </a>
+        </div>
     </main>
     
 	<footer>
