Mobile header border and public speaking typos

--- a/public-speaking-problems.html
+++ b/public-speaking-problems.html
@@ -56,7 +56,7 @@
 
         <section class="odd">
             <h2>Nervous Hands</h2>
-            <p>Rehearse while holding dumbbells (or other heavy objects) in your hands.</p>
+            <p>Rehearse while holding dumbbells, or other heavy objects, in your hands.</p>
         </section>
 
         <section class="even">
@@ -65,7 +65,7 @@
         </section>
 
         <section class="odd">
-            <h2>Insufficient Volume or Frequently Losing Your Voice or Insufficient Projection</h2>
+            <h2>Insufficient Volume or Frequently Losing Your Voice</h2>
             <p>Rehearse while laying flat on the ground facing upward with a heavy object on your belly. Whenever you inhale, force the object to rise. While speaking, force the object to fall. Try to relax your throat.</p>
         </section>
 
@@ -75,13 +75,13 @@
         </section>
 
         <section class="odd">
-            <h2>Monotone Voice or Invariant Vocal Pattern or Sounding Rehearsed</h2>
+            <h2>Monotone Voice, Invariant Vocal Pattern, or Sounding Rehearsed</h2>
             <p>Recite each line using three drastically different vocal patterns, even if some of them are ridiculous.</p>
         </section>
 
         <section class="even">
-            <h2>Repetitive of Insufficient Hand Gestures</h2>
-            <p>Recite each line using three different hand gestures, even if some of them don't make sense.</p>
+            <h2>Repetitive or Insufficient Hand Gestures</h2>
+            <p>Recite each line using three different hand gestures, even if some of them don't make sense. Remember that there are generally three binary choices for each hand gesture: one or two hands, palms facing up or down, and hands inside or outside the frame of the torso.</p>
         </section>
 
         <section class="odd">
@@ -105,7 +105,7 @@
         </section>
 
         <section class="odd">
-            <h2>Using filler words like "um," "uh," or "like"</h2>
+            <h2>Using Filler Words like "um," "uh," or "like"</h2>
             <p>Memorize. Write a script if necessary. It's easier to fix sounding rehearsed than beating this habit.</p>
         </section>
 
