--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="desc">
                         <b><a rel="external" href="https://arxiv.org/abs/2104.02004" target="_blank">Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation</a></b><br>
                         Nicholas Selby and Harry Asada<br>
-                        <a rel="external" href="http://www.ieee-ras.org/publications/ra-l" target="_blank">IEEE Robotics and Automation Letters</a> 6 (4), 6297–6304, 2021.<br>
+                        <a rel="external" href="http://www.ieee-ras.org/publications/ra-l" target="_blank">IEEE Robotics and Automation Letters</a> 6 (4), 6297–6304, 2021<br>
                         <a href="homepage/l3.bib" aria-label="BibTeX for paper titled &quot;Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation&quot;" target="_blank">BibTeX</a>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     <div class="desc">
                         <b><a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work</a></b><br>
                         Nicholas Selby, Jerry Ng, Glenda S Stump, George Westerman, Claire Traweek, and Harry Asada<br>
-                        <a rel="external" href="https://www.sciencedirect.com/journal/heliyon" target="_blank">Heliyon</a> 7 (7), e07583, 2021.<br>
+                        <a rel="external" href="https://www.sciencedirect.com/journal/heliyon" target="_blank">Heliyon</a> 7 (7), e07583, 2021<br>
                         <a href="homepage/teachbot.bib" aria-label="BibTeX for paper titled &quot;TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work&quot;" target="_blank">BibTeX</a>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     <div class="desc">
                         <b><a href="homepage/xducer.pdf" download target="_blank">Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers</a></b><br>
                         David Torello, Nicholas Selby, Jin-Yeon Kim, Jianmin Qu, and Laurence J. Jacobs<br>
-                        <a rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017.<br>
+                        <a rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017<br>
                         <a href="homepage/xducer.bib" aria-label="BibTeX for paper titled &quot;Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers&quot;" target="_blank">BibTeX</a>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     <div class="desc">
                         <b><a href="homepage/dualaxis.pdf" download target="_blank"><i>In Situ</i> Biaxial Rotation at Low-Temperatures in High Magnetic Fields</a></b><br>
                         Nicholas Selby, Matthew Crawford, Lisa Tracy, John L. Reno, and Wei Pan<br>
-                        <a rel="external" href="https://aip.scitation.org/journal/rsi" target="_blank">Review of Scientific Instruments</a> 85 (9), 095116, 2014.<br>
+                        <a rel="external" href="https://aip.scitation.org/journal/rsi" target="_blank">Review of Scientific Instruments</a> 85 (9), 095116, 2014<br>
                         <a href="homepage/dualaxis.bib" aria-label="BibTeX for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;" target="_blank">BibTeX</a>
                     </div>
                 </div>
@@ -151,8 +151,8 @@
                     <div class="desc">
                         <b>Methods and Apparatus for Wideband Localization</b><br>
                         Zhihong Luo, Qiping Zhang, Nicholas Selby, Yunfei Ma, Manish Singh, and Fadel Adib<br>
-                        U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, and <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a>.<br>
-                        Published 2020 and 2021.
+                        U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, and <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a><br>
+                        Published 2020 and 2021
                     </div>
                 </div>
     
@@ -163,8 +163,8 @@
                     <div class="desc">
                         <b>Full-Duplex, Bi-Directional, Analog Relay</b><br>
                         Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
-                        U.S. Patent No. <a rel="external" href="https://patents.google.com/patent/US10389429B2/" target="_blank" aria-label="Patent #10,389,429">10,389,429</a>.<br>
-                        Published 2019.
+                        U.S. Patent No. <a rel="external" href="https://patents.google.com/patent/US10389429B2/" target="_blank" aria-label="Patent #10,389,429">10,389,429</a><br>
+                        Published 2019
                     </div>
                 </div>
             </details>
@@ -177,14 +177,14 @@
                     <h2>Awards</h2>
                 </summary>
                 <ul>
-                    <li>First Place, MIT Mechanical Engineering Research Exhibition, 2019.</li>
-                    <li>Graduate Research Fellowship Honorable Mention, National Science Foundation, 2016.</li>
-                    <li>Richard K. Whitehead Jr. Memorial Award, Georgia Institute of Technology, 2016. Awarded to top three Mechanical Engineering seniors.</li>
-                    <li>Best Oral Presentation, Georgia Tech Undergraduate Research Symposium, 2016.</li>
-                    <li>President's Undergraduate Research Award, Georgia Institute of Technology, 2015.</li>
-                    <li>Air Products Undergraduate Research Award, Air Products and Chemicals, Inc., 2015.</li>
-                    <li>Best Utility Simulation for Product Design, ASME 2014 International Design & Engineering Technical Conferences & Computers & Information in Engineering Conference, 2014.</li>
-                    <li>Stamps Leadership Scholarship, Stamps Family Charitable Foundation, Inc., 2013. Merit-based, full cost of university attendance awarded to top 12 of 14,731 applicants.</li>
+                    <li>First Place at the MIT Mechanical Engineering Research Exhibition (2019)</li>
+                    <li>Graduate Research Fellowship Honorable Mention from the National Science Foundation (2016)</li>
+                    <li>Richard K. Whitehead Jr. Memorial Award, awarded to the top three Mechanical Engineering seniors at the Georgia Institute of Technology (2016)</li>
+                    <li>Best Oral Presentation at the Georgia Tech Undergraduate Research Symposium (2016)</li>
+                    <li>President's Undergraduate Research Award from the Georgia Institute of Technology (2015)</li>
+                    <li>Air Products Undergraduate Research Award from Air Products and Chemicals, Inc. (2015)</li>
+                    <li>Best Utility Simulation for Product Design from the ASME 2014 International Design & Engineering Technical Conferences & Computers & Information in Engineering Conference (2014)</li>
+                    <li>Stamps Leadership Scholarship, a merit-based, full-ride scholarship awarded to the top 12 of 14,731 applicants, from the Stamps Family Charitable Foundation (2013)</li>
                 </ul>
             </details>
         </section>
@@ -251,29 +251,29 @@
                 </summary>
                 Public Speaking:
                 <ul>
-                    <li>Invited lecturer for the MIT Office of Engineering Outreach Programs summer workshop, on "An Introduction to Machine Learning with PyTorch," 2021</li>
-                    <li>Invited lecturer for "Summer Springboard," a high school summer program, on "Robotics 101," 2021</li>
-                    <li>Host of "Science Day" for 600+ low-income K-5th graders at Conley Hills Elementary School, 2015</li>
-                    <li>Keynote speaker at FIRST Robotics international competition, 2014</li>
-                    <li>Keynote speaker at No Excuses University national convention, 2014</li>
-                    <li>Host of "Tech Talks," a science communication competition, at the Atlanta Science Festival, 2014</li>
-                    <li>Opening speaker for the Georgia Tech Freshman Convocation Ceremony, 2013</li>
+                    <li>Invited lecturer for the MIT Office of Engineering Outreach Programs summer workshop, on "An Introduction to Machine Learning with PyTorch" (2021)</li>
+                    <li>Invited lecturer for "Summer Springboard," a high school summer program, on "Robotics 101" (2021)</li>
+                    <li>Host of "Science Day" for 600+ low-income K-5th graders at Conley Hills Elementary School (2015)</li>
+                    <li>Keynote speaker at FIRST Robotics international competition (2014)</li>
+                    <li>Keynote speaker at No Excuses University national convention (2014)</li>
+                    <li>Host of "Tech Talks," a science communication competition, at the Atlanta Science Festival (2014)</li>
+                    <li>Opening speaker for the Georgia Tech Freshman Convocation Ceremony (2013)</li>
                 </ul>
                 Academic Service:
                 <ul>
-                    <li>MIT Graduate Student Council, 2020⁠–2021</li>
-                    <li>MIT Mechanical Engineering Diversity, Equity, and Inclusion Working Group, 2020⁠–2021</li>
-                    <li>University System of Georgia China Outreach Program, 2014</li>
+                    <li>MIT Graduate Student Council (2020⁠–2021)</li>
+                    <li>MIT Mechanical Engineering Diversity, Equity, and Inclusion Working Group (2020⁠–2021)</li>
+                    <li>University System of Georgia China Outreach Program (2014)</li>
                 </ul>
                 Journal Referee [<a rel="external" href="https://publons.com/researcher/3507536/nicholas-stearns-selby/peer-review/" target="_blank">Publons</a>]:
                 <ul>
-                    <li><a rel="external" href="https://dl.acm.org/journal/tosn" target="_blank">ACM Transactions on Sensor Networks</a></li>
-                    <li><a rel="external" href="https://www.iros2021.org/" target="_blank">IEEE International Conference on Intelligent Robots and Systems</a></li>
-                    <li><a rel="external" href="https://ieee-iotj.org/" target="_blank">IEEE Internet of Things Journal</a></li>
-                    <li><a rel="external" href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6979" target="_blank">IEEE Transactions on Intelligent Transportation Systems</a></li>
-                    <li><a rel="external" href="https://www.computer.org/web/tmc" target="_blank">IEEE Transactions on Mobile Computing</a></li>
-                    <li><a rel="external" href="https://car.osu.edu/AAC2022" target="_blank">IFAC International Symposium on Advances in Automotive Control</a></li>
-                    <li><a rel="external" href="https://www.mtns2022.uni-bayreuth.de/en/index.html" target="_blank">International Symposium on Mathematical Theory of Networks and Systems</a></li>
+                    <li>ACM Transactions on Sensor Networks</li>
+                    <li>IEEE International Conference on Intelligent Robots and Systems</li>
+                    <li>IEEE Internet of Things Journal</li>
+                    <li>IEEE Transactions on Intelligent Transportation Systems</li>
+                    <li>IEEE Transactions on Mobile Computing</li>
+                    <li>IFAC International Symposium on Advances in Automotive Control</li>
+                    <li>International Symposium on Mathematical Theory of Networks and Systems</li>
                 </ul>
             </details>
         </section>
