--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
                     <h2>Awards</h2>
                 </summary>
                 <ul>
+                    <li>National Science Foundation Innovation Corps Teams Grant (2020)</li>
+                    <li>National Science Foundation Innovation Corps Fusion Grant (2019)</li>
                     <li>First Place at the MIT Mechanical Engineering Research Exhibition (2019)</li>
                     <li>Graduate Research Fellowship Honorable Mention from the National Science Foundation (2016)</li>
                     <li>Richard K. Whitehead Jr. Memorial Award, awarded to the top three Mechanical Engineering seniors at the Georgia Institute of Technology (2016)</li>
