EASW, Horace, and ellipses

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                     The whole secret of life is to be interested in one thing profoundly and in a thousand things as well.
                 </div>
                 <div id="quote-citation">
-                    ― Hugh Walpole
+                    ― Horace Walpole
                 </div>
             </div>
         </div>
