--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
                 </summary>
                 Public Speaking:
                 <ul>
+                    <li>Session Expert on "How Mini-grids are Electrifying the Region" at Eastern Africa Solar Week Conference (2022)</li>
                     <li>Invited lecturer for the MIT Office of Engineering Outreach Programs summer workshop, on "An Introduction to Machine Learning with PyTorch" (2021)</li>
                     <li>Invited lecturer for "Summer Springboard," a high school summer program, on "Robotics 101" (2021)</li>
                     <li>Host of "Science Day" for 600+ low-income K-5th graders at Conley Hills Elementary School (2015)</li>
