--- a/kidney.html
+++ b/kidney.html
@@ -182,7 +182,7 @@
         <section id="s06">
             <h2>Step 6: Committee Approval</h2>
             <h3>September 26, 2019</h3>
-            <p>I got a voicemail from Nurse Emily yesterday asking me to call her back for news about my donation. I called back today and she informed me that I had been approved to donate! How do I feel? Definitely a little excited, but to be honest, I didn't think there was much chance of me getting rejected. I'm definitely glad to hear the news though.</p>
+            <p>I got a voicemail from Nurse Emily yesterday asking me to call her back for news about my donation. I called back today, and she informed me that I had been approved to donate! How do I feel? Definitely a little excited, but to be honest, I didn't think there was much chance of me getting rejected. I'm definitely glad to hear the news though.</p>
             <p>Nurse Emily sent me an informational slideshow which is pretty much just a review of the materials I've already read as well as a couple of forms to sign allowing MGH to share the results with the National Kidney Registry (NKR). She also explained that, since I won't be donating until June, I should hold off on that final set of labs until I'm ready to be activated on the registry. My plan is to graduate on May 29, meaning that I should do the final labs and get activated mid-May.</p>
             <p>So the next step is updating my family over Thanksgiving. I think it'll go well. My prediction is that they will be supportive, but make at least some effort to get me not to do it by asking a lot of "what if" questions. I just have to be ready with data. For example:</p>
             <ul>
