--- a/business-card.html
+++ b/business-card.html
@@ -54,7 +54,7 @@
 
         <a class="contact" href="business-card/qr.png" target="_blank">
             <img alt="QR code icon" src="business-card/icon-qr.jpg">
-            <p>Get sharable QR code</p>
+            <p>Get shareable QR code</p>
         </a>
 
         <textarea id="notes" name="notes" placeholder="Write a note here for later. For example, 'Nick builds solar minigrids in Africa and is excited to collaborate!'" rows="4"></textarea>
