--- a/gospel-authorship.html
+++ b/gospel-authorship.html
@@ -25,7 +25,7 @@
 <body>
 	<header>
         <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <input class="menu-btn" type="checkbox" id="menu-btn">
         <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
         <ul class="menu">
             <li><a href="index.html">HOME</a></li>
@@ -238,7 +238,7 @@
     </main>
     
 	<footer>
-		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
 </body>
 </html>
