--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<header>
         <div id="name">NICHOLAS S SELBY</div>
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <input class="menu-btn" type="checkbox" id="menu-btn">
         <label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
         <ul class="menu">
             <li><a class="active-link" href="index.html">HOME</a></li>
@@ -268,7 +268,7 @@
                     <li>MIT Mechanical Engineering Diversity, Equity, and Inclusion Working Group (2020⁠–2021)</li>
                     <li>University System of Georgia China Outreach Program (2014)</li>
                 </ul>
-                Journal Referee [<a rel="external" href="https://publons.com/researcher/3507536/nicholas-stearns-selby/peer-review/" target="_blank">Publons</a>]:
+                Journal Referee [<a rel="external" href="https://www.webofscience.com/wos/author/record/1974564" target="_blank">Web of Science</a>]:
                 <ul>
                     <li>ACM Transactions on Sensor Networks</li>
                     <li>IEEE International Conference on Intelligent Robots and Systems</li>
@@ -283,7 +283,7 @@
     </main>
 
 	<footer>
-		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+		<p><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>This work is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 	</footer>
 </body>
 </html>
